--- a/css/login_cliente.css
+++ b/css/login_cliente.css
@@ -1,17 +1,19 @@
 body{
-  font-family: 'Open Sans', sans-serif;
-  background:#3498db;
+  background-color: white;
+  font-family: lao mn;
   margin: 0 auto 0 auto;  
-  width:100%; 
-  text-align:center;
   margin: 20px 0px 20px 0px;   
 }
 
-p{
+
+
+a{
   font-size:12px;
   text-decoration: none;
-  color:#ffffff;
+  color:#2980b9;
 }
+
+
 
 h1{
   font-size:1.5em;
@@ -24,10 +26,10 @@ h1{
   border-radius:6px;
   margin: 0 auto 0 auto;
   padding:0px 0px 70px 0px;
-  border: #2980b9 4px solid; 
+  border: #D4D4D4 2px solid; 
 }
 
-.email{
+.email, .contra{
   background:#ecf0f1;
   border: #ccc 1px solid;
   border-bottom: #ccc 2px solid;
@@ -37,6 +39,10 @@ h1{
   margin-top:10px;
   font-size:1em;
   border-radius:4px;
+}
+
+.contra{
+  margin-left: 5px;
 }
 
 .password{
@@ -87,4 +93,93 @@ h1{
 
 #btn2:hover{ 
 background:#3594D2; 
+}
+
+
+
+
+
+/** CSS general **/
+
+hr {
+  width: : 4px;
+}
+
+.colorTitulo {
+  color: #b94000;
+  padding-left: 20px;
+  font-weight: bolder;
+  font-size: 10px;
+}
+.jumbotron {
+    background-color: white;
+    padding-top: 15px !important;
+    padding-right: 0px !important;
+    padding-left: 0px !important;
+}
+
+
+.row-index
+{
+  width: 75%;
+}
+
+/* Ajuste padding cabecera */
+.noPaddingLogin {
+  padding-left: 0px;
+}
+
+.noPaddingDirectorio {
+  padding-right: 0px;
+}
+
+.panelLogin {
+  border-radius: 0px;
+}
+
+/* Fin padding cabecera */
+
+/* Padding busqueda avanzada */
+
+.paddingBusquedaAvanzada {
+  padding-top: 15px;
+}
+
+/************** FIN ESTILOS ************/
+
+/** Medias queries **/
+
+@media screen and (min-width: 768px) {
+
+  .paddingBusquedaAvanzada {
+    padding-top: 0px;
+  }
+}
+
+@media screen and (max-width: 360px) {
+
+  .row {
+    margin-left: 0px;
+  }
+
+/** Medias queries con valores especificos **/
+
+@media only screen and (max-width: 360px) {
+
+.col-xs-offset-2 {
+  margin-left: 10.667%;
+}
+
+#login {
+  padding: 14px;
+}
+
+@media only screen and (max-width: 320px) {
+
+.col-xs-offset-2 {
+    margin-left: 5.667%;
+}
+
+#login {
+  margin-bottom: 20px;
 }
