--- a/css/login_cliente.css
+++ b/css/login_cliente.css
@@ -5,6 +5,14 @@ body{
   margin: 20px 0px 20px 0px;   
 }
 
+.container{
+    padding-left: 33%;
+}
+
+.caja{
+  margin-right: 2%;
+}
+
 
 
 a{
@@ -18,6 +26,7 @@ a{
 h1{
   font-size:1.5em;
   color:#525252;
+  text-align: center;
 }
 
 .box{
@@ -34,15 +43,12 @@ h1{
   border: #ccc 1px solid;
   border-bottom: #ccc 2px solid;
   padding: 8px;
+  margin-left: 8%;
   width:250px;
   color:#AAAAAA;
   margin-top:10px;
   font-size:1em;
   border-radius:4px;
-}
-
-.contra{
-  margin-left: 5px;
 }
 
 .password{
