--- a/css/login_cliente.css
+++ b/css/login_cliente.css
@@ -21,6 +21,10 @@ a{
   color:#2980b9;
 }
 
+a.olvido{
+  padding-left: 8%;
+}
+
 
 
 h1{
@@ -44,7 +48,7 @@ h1{
   border-bottom: #ccc 2px solid;
   padding: 8px;
   margin-left: 8%;
-  width:250px;
+  width:240px;
   color:#AAAAAA;
   margin-top:10px;
   font-size:1em;
@@ -61,35 +65,40 @@ h1{
 }
 
 .btn{
-  background:#2ecc71;
-  width:125px;
+  background:#b94000;
+  width:35%;
   padding-top:5px;
   padding-bottom:5px;
-  color:white;
+  color: white;
   border-radius:4px;
-  border: #27ae60 1px solid;
-  
   margin-top:20px;
   margin-bottom:20px;
   float:left;
-  margin-left:16px;
+  margin-left:25px;
   font-weight:800;
   font-size:0.8em;
 }
 
+h5{
+  text-decoration: underline;
+  text-align: center;
+}
+
 .btn:hover{
-  background:#2CC06B; 
+  background:#FF8F25;
+  color:white; 
 }
 
 #btn2{
   float:left;
-  background:#3498db;
-  width:125px;  padding-top:5px;
+  margin-left: 11%;
+  background:#b94000;
+  width:35%;  padding-top:5px;
   padding-bottom:5px;
   color:white;
   border-radius:4px;
   border: #2980b9 1px solid;
-  
+  text-align: center;
   margin-top:20px;
   margin-bottom:20px;
   margin-left:10px;
@@ -98,9 +107,8 @@ h1{
 }
 
 #btn2:hover{ 
-background:#3594D2; 
+background:#FF8F25; 
 }
-
 
 
 
@@ -124,6 +132,9 @@ hr {
     padding-left: 0px !important;
 }
 
+.titulo_box{
+  padding-left: 4%;
+}
 
 .row-index
 {
