--- a/css/login_cliente.css
+++ b/css/login_cliente.css
@@ -130,6 +130,7 @@ hr {
     padding-top: 15px !important;
     padding-right: 0px !important;
     padding-left: 0px !important;
+    margin-bottom: auto;
 }
 
 .titulo_box{
