--- a/css/index.css
+++ b/css/index.css
@@ -35,6 +35,7 @@ hr {
     padding-top: 15px !important;
     padding-right: 0px !important;
     padding-left: 0px !important;
+    margin-bottom: auto;
 }
 
 /* Apartado de login */
