--- a/css/registro_cliente.css
+++ b/css/registro_cliente.css
@@ -5,8 +5,8 @@ body{
   margin: 20px 0px 20px 0px;   
 }
 
-.container{
-    padding-left: 3%;
+.conjunto{
+    margin: 0 3% 0 3%;
 
 }
 
@@ -16,8 +16,9 @@ body{
 }
 
 h5{
-  text-decoration: underline;
+  background-color:#FFD7B0;
   text-align: left;
+  padding-left: 1%;
 }
 
 
@@ -41,34 +42,25 @@ h1{
 
 .box{
   background:white;
-  width:300px;
+  width:100%;
   border-radius:6px;
   margin: 0px !important;
   padding:0px 0px 1% 0px;
   border: #D4D4D4 2px solid; 
 }
 
-.email, .contra{
+.email{
   background:#ffffff;
   border: #ccc 1px solid;
   border-bottom: #ccc 2px solid;
   padding: 8px;
-  margin-left: 8%;
-  width:240px;
+  width:100%;
   color:#AAAAAA;
   margin-top:10px;
   font-size:1em;
   border-radius:4px;
 }
 
-.password{
-  border-radius:4px;
-  background:#ecf0f1;
-  border: #ccc 1px solid;
-  padding: 8px;
-  width:250px;
-  font-size:1em;
-}
 
 .btn{
   background:#b94000;
@@ -92,28 +84,6 @@ h1{
   color:white; 
 }
 
-#btn2{
-  float:left;
-  background:#b94000;
-  width:125px;  padding-top:5px;
-  padding-bottom:5px;
-  color:white;
-  border-radius:4px;
-  border: #2980b9 1px solid;
-  text-align: center;
-  margin-top:20px;
-  margin-bottom:20px;
-  margin-left:10px;
-  font-weight:800;
-  font-size:0.8em;
-}
-
-#btn2:hover{ 
-background:#FF8F25; 
-}
-
-
-
 
 
 /** CSS general **/
@@ -133,6 +103,7 @@ hr {
     padding-top: 15px !important;
     padding-right: 0px !important;
     padding-left: 0px !important;
+    margin-bottom: auto;
 }
 
 
