--- a/css/login.css
+++ b/css/login.css
@@ -13,16 +13,33 @@ body{
   margin-right: 2%;
 }
 
+a.atras{
+  font-size: 20px;
+  color: #b94000;
+  cursor: pointer;
+}
 
+a.atras:hover{
+  text-decoration: none;
+  color: #b94000;
+  cursor: pointer;
+}
 
 a{
   font-size:12px;
   text-decoration: none;
   color:#2980b9;
+  cursor: pointer;
 }
 
 a.olvido{
   padding-left: 8%;
+}
+
+a:hover{
+  color:#2980b9;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 
@@ -97,13 +114,14 @@ h5{
   padding-bottom:5px;
   color:white;
   border-radius:4px;
-  border: #2980b9 1px solid;
+  border: #b94000 1px solid;
   text-align: center;
   margin-top:20px;
   margin-bottom:20px;
   margin-left:10px;
   font-weight:800;
   font-size:0.8em;
+  margin-left: 10%;
 }
 
 #btn2:hover{ 
