--- a/css/mostrarBusquedas.css
+++ b/css/mostrarBusquedas.css
@@ -77,6 +77,10 @@
   padding-left: 15px;
 }
 
+.paddingFecha {
+  padding-bottom: 10px;
+}
+
 /******************************************/
 
 /* Estilos para contenedor de busqueda */
@@ -102,6 +106,37 @@
   padding: 5px 5px 10px 20px;
   border-bottom: 1px solid #cacaca;
   margin-left: -10px;
+}
+
+.paddingImagen {
+  padding-left: 0px;
+}
+
+.separadorLateral {
+  border-right: solid 1px #cacaca;
+  padding-bottom: 5px;
+}
+
+}
+.infoText--primary {
+
+    font-size: 16px;
+    font-size: 1.14286rem;
+    font-weight: 500;
+
+}
+.infoText {
+
+    font-size: 14px;
+    color: #535353;
+}
+
+.tituloOferta {
+    font-size: 20px;
+    color: #535353;
+    font-weight: 500;
+    line-height: 1.4;
+    margin: 0;
 }
 
 /********************************************/
