--- a/css/login_empresa.css
+++ b/css/login_empresa.css
@@ -1,13 +1,36 @@
-body{
-  background-color: white;
-  font-family: lao mn;
-  margin: 0 auto 0 auto;  
-  margin: 20px 0px 20px 0px;   
-}
+/*** ESTILO CONTENEDOR ***/
 
 .container{
-    padding-left: 33%;
+    margin-left: 27%;
+  }
+
+/*** FIN *
+
+
+/*** ESTILOS PARA LOS BOTONES DE LOGIN ***/
+
+#btnAcceder, #btnAlta, #btnOlvido {
+  border-radius: 4px;
+  background-color: darkcyan;
+
 }
+#btnAcceder {
+  margin-right: 5px;
+}
+
+#btnAlta {
+  margin-right: 5px;
+}
+
+.separacionTop {
+  padding-top: 13px;
+}
+
+/*** FIN ***/
+
+
+
+/*** ESTILOS NO DANI
 
 .caja{
   margin-right: 2%;
@@ -56,7 +79,7 @@ h1{
   border-radius:6px;
   margin: 0 auto 0 auto;
   padding:0px 0px 70px 0px;
-  border: #D4D4D4 2px solid; 
+  border: #D4D4D4 2px solid;
 }
 
 .email, .contra{
@@ -103,7 +126,7 @@ h5{
 
 .btn:hover{
   background:#FF8F25;
-  color:white; 
+  color:white;
 }
 
 #btn2{
@@ -124,98 +147,11 @@ h5{
   margin-left: 10%;
 }
 
-#btn2:hover{ 
-background:#FF8F25; 
+#btn2:hover{
+background:#FF8F25;
 }
 
 
-
+**/
 
 /** CSS general **/
-
-hr {
-  width: : 4px;
-}
-
-.colorTitulo {
-  color: #b94000;
-  padding-left: 20px;
-  font-weight: bolder;
-  font-size: 10px;
-}
-.jumbotron {
-    background-color: white;
-    padding-top: 15px !important;
-    padding-right: 0px !important;
-    padding-left: 0px !important;
-    margin-bottom: auto;
-}
-
-.titulo_box{
-  padding-left: 4%;
-}
-
-.row-index
-{
-  width: 75%;
-}
-
-/* Ajuste padding cabecera */
-.noPaddingLogin {
-  padding-left: 0px;
-}
-
-.noPaddingDirectorio {
-  padding-right: 0px;
-}
-
-.panelLogin {
-  border-radius: 0px;
-}
-
-/* Fin padding cabecera */
-
-/* Padding busqueda avanzada */
-
-.paddingBusquedaAvanzada {
-  padding-top: 15px;
-}
-
-/************** FIN ESTILOS ************/
-
-/** Medias queries **/
-
-@media screen and (min-width: 768px) {
-
-  .paddingBusquedaAvanzada {
-    padding-top: 0px;
-  }
-}
-
-@media screen and (max-width: 360px) {
-
-  .row {
-    margin-left: 0px;
-  }
-
-/** Medias queries con valores especificos **/
-
-@media only screen and (max-width: 360px) {
-
-.col-xs-offset-2 {
-  margin-left: 10.667%;
-}
-
-#login {
-  padding: 14px;
-}
-
-@media only screen and (max-width: 320px) {
-
-.col-xs-offset-2 {
-    margin-left: 5.667%;
-}
-
-#login {
-  margin-bottom: 20px;
-}
