--- a/css/login_cliente.css
+++ b/css/login_cliente.css
@@ -1,10 +1,14 @@
 /*** ESTILO CONTENEDOR ***/
 
-.container{
-    margin-left: 27%;
+.container-fluid {
+    margin-left: 325px;
   }
 
 /*** FIN ***/
+
+
+
+
 
 /*** ESTILOS PARA LOS BOTONES DE LOGIN ***/
 
