--- a/css/forgotten_passwd.css
+++ b/css/forgotten_passwd.css
@@ -2,4 +2,18 @@
 
 #btnSendMail {
   background-color: darkcyan;
+  font-size: 20px;
+}
+
+.btn-group {
+  padding-left: 70px;
+}
+
+.fa {
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: 25px !important;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
