--- a/css/general.css
+++ b/css/general.css
@@ -1,3 +1,9 @@
+
+.container-welcome {
+    margin-left: 325px;
+  }
+
+
 .panel-primary > .panel-heading {
   background-color: chocolate !important;
   border-color: chocolate !important;
@@ -12,4 +18,21 @@
 
 .panel-body {
   padding: 5px !important;
+}
+
+
+.navbar-wrapper {
+	position: absolute;
+	top: 0;
+	right: 0;
+	left: 0;
+	z-index: 20;
+  margin-top: 20px;
+}
+
+.index-busc .wrapper {
+	display: inline-block;
+	vertical-align: middle;
+	*display: inline;
+	zoom: 1;
 }
