--- a/css/forgotten_cliente.css
+++ b/css/forgotten_cliente.css
@@ -1,3 +1,9 @@
+/** Correcion margen izquierdo navbar **/
+.container {
+  margin-left: 73px !important;
+}
+
+
 /** Estilo boton **/
 
 #btnSendMail {
