--- a/css/login_cliente.css
+++ b/css/login_cliente.css
@@ -36,12 +36,15 @@
 
 /*** ESTILOS GRUPOS DE INPUT Y BOTONES ***/
 
-.separacionTop {
-  padding-top: 13px;
+.datosAcceso {
+  margin-left: 90px;
+  padding-bottom: 15px;
 }
 
-.ajusteLateral {
-  padding-left: 63px;
+.botoneraAcceso {
+  margin-left: 90px;
+  padding-bottom: 15px;
+
 }
 
 
