--- a/css/login_empresa.css
+++ b/css/login_empresa.css
@@ -4,6 +4,54 @@
   margin-left: 73px !important;
 }
 
+body {
+  background-image: url("../imagenes/entradaBar2.jpg");
+}
+
+.navbar-wrapper {
+	position: absolute;
+	top: 0;
+	right: 0;
+	left: 0;
+	z-index: 20;
+  margin-top: 20px;
+}
+
+.index-busc .wrapper {
+	display: inline-block;
+	vertical-align: middle;
+	display: inline;
+	zoom: 1;
+}
+
+.index-busc {
+	top: 150px;
+	text-align: center;
+	position: relative;
+}
+
+
+.index-busc .index-busc-cab-registro  {
+	text-align: center;
+	background: rgba(255,255,255,.8);
+	padding: 20px 15px;
+	margin: 0 auto;
+	width: 390px;
+	z-index: 100;
+	position: relative;
+  border-radius: 4px;
+}
+
+.index-busc .index-busc-cab-alta  {
+	text-align: center;
+	background: rgba(255,255,255,.8);
+	padding: 20px 15px;
+	margin: 0 auto;
+	width: 275px;
+	z-index: 100;
+	position: relative;
+  border-radius: 4px;
+}
 /** Fin **/
 
 /*** ESTILOS PARA LOS BOTONES DE LOGIN ***/
@@ -41,130 +89,3 @@
 .ajusteLateral {
   padding-left: 63px;
 }
-
-
-/*** ESTILOS NO DANI
-
-.caja{
-  margin-right: 2%;
-}
-
-a.atras{
-  font-size: 20px;
-  color: #b94000;
-  cursor: pointer;
-}
-
-a.atras:hover{
-  text-decoration: none;
-  color: #b94000;
-  cursor: pointer;
-}
-
-a{
-  font-size:12px;
-  text-decoration: none;
-  color:#2980b9;
-  cursor: pointer;
-}
-
-a.olvido{
-  padding-left: 8%;
-}
-
-a:hover{
-  color:#2980b9;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-
-
-h1{
-  font-size:1.5em;
-  color:#525252;
-  text-align: center;
-}
-
-.box{
-  background:white;
-  width:300px;
-  border-radius:6px;
-  margin: 0 auto 0 auto;
-  padding:0px 0px 70px 0px;
-  border: #D4D4D4 2px solid;
-}
-
-.email, .contra{
-  background:#ecf0f1;
-  border: #ccc 1px solid;
-  border-bottom: #ccc 2px solid;
-  padding: 8px;
-  margin-left: 8%;
-  width:240px;
-  color:#AAAAAA;
-  margin-top:10px;
-  font-size:1em;
-  border-radius:4px;
-}
-
-.password{
-  border-radius:4px;
-  background:#ecf0f1;
-  border: #ccc 1px solid;
-  padding: 8px;
-  width:250px;
-  font-size:1em;
-}
-
-.btn{
-  background:#b94000;
-  width:35%;
-  padding-top:5px;
-  padding-bottom:5px;
-  color: white;
-  border-radius:4px;
-  margin-top:20px;
-  margin-bottom:20px;
-  float:left;
-  margin-left:25px;
-  font-weight:800;
-  font-size:0.8em;
-}
-
-h5{
-  text-decoration: underline;
-  text-align: center;
-}
-
-.btn:hover{
-  background:#FF8F25;
-  color:white;
-}
-
-#btn2{
-  float:left;
-  margin-left: 11%;
-  background:#b94000;
-  width:35%;  padding-top:5px;
-  padding-bottom:5px;
-  color:white;
-  border-radius:4px;
-  border: #b94000 1px solid;
-  text-align: center;
-  margin-top:20px;
-  margin-bottom:20px;
-  margin-left:10px;
-  font-weight:800;
-  font-size:0.8em;
-  margin-left: 10%;
-}
-
-#btn2:hover{
-background:#FF8F25;
-}
-
-
-**/
-
-/** CSS general **/
