--- a/css/ficha_cliente.css
+++ b/css/ficha_cliente.css
@@ -51,3 +51,61 @@
   margin-right: 15%;
   background-color: beige;
 }
+
+.header {
+	position: relative;
+	background: #f1f1f1;
+	border-radius: 2px 2px 0 0;
+	border-bottom: 1px solid #e1e1e1;
+	padding: 10px;
+}
+
+.box-opciones {
+	box-sizing: border-box;
+	border-bottom: 1px solid #e1e1e1;
+
+
+}
+
+.box-herramientas {
+	border-radius: 2px;
+	box-shadow: 0 2px 0 0 rgba(0,0,0,.03);
+	background-color: #fff;
+	border: 1px solid #e1e1e1;
+	margin-bottom: 15px;
+	margin-top: 20%;
+}
+
+.selected {
+	color: #222;
+	font-weight: 600;
+}
+
+a {
+	display: inline-block;
+	text-decoration: none;
+	color: #F76C6F;
+	margin: 0;
+padding: 0;
+border: 0;
+font: inherit;
+font-size: 100%;
+}
+
+ul {
+	list-style: none;
+	font-size: 14px;
+	line-height: 23.8px;
+	margin: 0;
+	padding: 0;
+}
+li {
+	box-sizing: border-box;
+	border-bottom: 1px solid #e1e1e1;
+	padding: 8px 15px;
+	margin: 0
+}
+
+h3 {
+	margin-top: 5px;
+}
