--- a/css/login_empresa.css
+++ b/css/login_empresa.css
@@ -5,7 +5,9 @@
 }
 
 body {
-  background-image: url("../imagenes/entradaBar2.jpg");
+  background-image: url("../imagenes/entradaBar3.jpg");
+  background-size: 1366px;
+
 }
 
 .navbar-wrapper {
