--- a/css/ficha_cliente.css
+++ b/css/ficha_cliente.css
@@ -1,3 +1,13 @@
+body {
+	background-color: transparent;
+	background-image: url('../imagenes/entradaBar1.jpg');
+}
+
+img {
+	opacity: .5;
+}
+
+
 .navbar-wrapper {
 	position: absolute;
 	top: 0;
