--- a/css/empresa.css
+++ b/css/empresa.css
@@ -16,7 +16,7 @@ body {
 	z-index: 20;
   margin-top: 20px;
 }
-/*
+
 .index-busc .wrapper {
 	display: inline-block;
 	vertical-align: middle;
@@ -26,37 +26,48 @@ body {
 
 .index-busc {
 	top: 150px;
+  left: 23%;
 	text-align: center;
 	position: relative;
 }
 
 
 .index-busc .index-busc-cab  {
-  display: flex;
-  flex: 0,0,100px;
+  position: relative;
 	text-align: center;
 	background: rgba(255,255,255,.8);
 	padding: 20px 15px;
 	margin: 0 auto;
-	width: 390px;
-  height: 300px;
+	width: 420px;
+  height: 470px;
 	z-index: 100;
 	position: relative;
   border-radius: 4px;
 }
-*/
+
+.form-control {
+  width: 95%;
+}
+
+
+#logotipo {
+  margin-left: 10px;
+}
+
+
+/*
 .flex-container {
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: column wrap;
   width: auto;
-  height: 150px;
+  height: 350px;
   position: relative;
   top:190px;
 }
 
 .flex-item {
   display: flex;
-  flex: 0 0 45%;
+  flex: 0 0 50%;
   background: rgba(255,255,255,.8);
 	padding: 20px 25px;
 	margin: 10px auto;
@@ -64,6 +75,7 @@ body {
 	position: relative;
   border-radius: 4px;
 }
+
 
 
 
