--- a/css/mostrarBusquedas.css
+++ b/css/mostrarBusquedas.css
@@ -21,6 +21,7 @@
 /* Estilos para contenedor cabecera */
 .containerCabecera {
   padding: 15px;
+  margin-top: 5%;
 }
 
 /*****************************************/
