--- a/css/ajustes_empresa.css
+++ b/css/ajustes_empresa.css
@@ -1,8 +1,7 @@
 body {
-	background-color: transparent;
-	background-image: url('../imagenes/entradaBar1.jpg');
+	background-image: url('../imagenes/entradaBar3.jpg');
+	background-size: 1366px;
 }
-
 
 .navbar-wrapper {
 	position: absolute;
