--- a/css/empresa.css
+++ b/css/empresa.css
@@ -16,7 +16,7 @@ body {
 	z-index: 20;
   margin-top: 20px;
 }
-
+/*
 .index-busc .wrapper {
 	display: inline-block;
 	vertical-align: middle;
@@ -44,41 +44,51 @@ body {
 	position: relative;
   border-radius: 4px;
 }
-
+*/
 .form-control {
   width: 95%;
 }
 
+.form-group {
+  margin-left: 27px;
+}
+
+.input-form {
+  margin: 0px;
+}
 
 #logotipo {
   margin-left: 10px;
 }
 
 
-/*
+
 .flex-container {
   display: flex;
-  flex-flow: column wrap;
-  width: auto;
-  height: 350px;
+  flex-flow: row wrap;
+  background: rgba(255,255,255,.8);
+  border-radius: 4px;
+  width: 500px;
+  height: 510px;
   position: relative;
-  top:190px;
+  top:110px;
+  left: 28%;
+  align-content: flex-start;
 }
 
 .flex-item {
   display: flex;
-  flex: 0 0 50%;
-  background: rgba(255,255,255,.8);
-	padding: 20px 25px;
-	margin: 10px auto;
+  flex: 0 0 100%;
+	padding: 0px 25px;
+	margin: 0px auto;
 	z-index: 100;
 	position: relative;
   border-radius: 4px;
 }
 
-
-
-
+.flex-item-centrado {
+  justify-content: center;
+}
 
 /* Apartado de login */
 
