--- a/css/mis_ofertas.css
+++ b/css/mis_ofertas.css
@@ -64,23 +64,29 @@ body {
 .flex-container {
   display: flex;
   flex-flow: row nowrap;
+  border-bottom: 1px solid #777;
 }
 
 .flex-foto {
-  flex: 0 0 40%;
-  padding: 10px;
+  flex: 0 0 20%;
+  padding: 20px;
 
 }
+
+.img-thumbnail {
+  box-shadow: 0 0 5px 5px rgb(135, 135, 143);
+}
+
 
 img {
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 100px;
   border-radius: 4px;
-  box-shadow: 0 11px 0 0 rgba(0,0,0,.03);
 }
 
+
 .flex-contenido {
-  flex: 0 0 60%;
+  flex: 0 0 80%;
 }
 
 a {
