--- a/css/mostrarBusquedas.css
+++ b/css/mostrarBusquedas.css
@@ -1,22 +1,10 @@
-.lnr {
-  display: inline-block;
-  fill: currentColor;
-  width: 1em;
-  height: 1em;
-  vertical-align: -0.05em;
-}
-
-.lnr-linearicons {
-  color: #0F52BA;
-  font-size: 40px;
+body {
+	background-image: url('../imagenes/fondoBusquedas.jpg');
+	background-size: 1366px;
 }
 
 
 
-
-.container {
-  background-color: chocolate;
-}
 
 /* Estilos para contenedor cabecera */
 .containerCabecera {
@@ -33,6 +21,7 @@
   height: ;
   padding: 5px;
   margin: 5px;
+  border-radius: 4px;
 }
 
 .unstyled, .listing {
@@ -47,14 +36,6 @@
 .controlList {
     line-height: 1.2;
 }
-
-/*
-.control-input {
-    position: absolute;
-    opacity: 0;
-    z-index: -1;
-}
-*/
 
 .controlList-label {
   line-height: 2.1;
@@ -89,7 +70,6 @@
 .containerSearch {
   background-color: white;
   width: ;
-  height: ;
   padding: 5px;
   margin: 5px;
   padding-left: 40px;
@@ -97,6 +77,7 @@
   height: 400px;
   overflow-x: hidden;
   overflow-y: auto;
+  border-radius: 4px;
 }
 
 /********************************************/
