--- a/css/mostrarBusquedas.css
+++ b/css/mostrarBusquedas.css
@@ -125,7 +125,14 @@ img {
 		margin-top: 0px;
 }
 
+.box-fecha {
+	position: relative;
+	top: 15px;
+	padding-left: 30px;
+}
+
 #imagenNegocio {
   cursor: pointer;
+	margin-top: 5px;
 }
 /********************************************/
