--- a/css/alta_empresa.css
+++ b/css/alta_empresa.css
@@ -43,6 +43,7 @@ h3 {
 	padding: 20px 15px;
 	margin: 0 auto;
 	width: 320px;
+  height: 345px;
 	z-index: 100;
 	position: relative;
   border-radius: 4px;
@@ -55,6 +56,7 @@ h3 {
 	padding: 20px 15px;
 	margin: 0 auto;
 	width: 325px;
+  height: 345px;
 	z-index: 100;
 	position: relative;
   border-radius: 4px;
@@ -84,8 +86,8 @@ h3 {
 	z-index: 100;
 	position: relative;
   border-radius: 4px;
-  top: -105px;
-  left: -30px;
+  top: 25px;
+  left: 100px;
 }
 
 .input-group {
