--- a/css/mostrarBusquedas.css
+++ b/css/mostrarBusquedas.css
@@ -74,10 +74,13 @@ img {
   margin: 5px;
   padding-left: 40px;
   padding-right: 20px;
-  height: 400px;
+  height: 430px;
   overflow-x: hidden;
   overflow-y: auto;
   border-radius: 4px;
+	position: relative;
+	left: 16%;
+
 }
 
 /********************************************/
@@ -125,7 +128,7 @@ img {
 .box-fecha {
 	position: relative;
 	top: 15px;
-	padding-left: 30px;
+	padding-left: 5px;
 }
 
 #imagenNegocio {
