--- a/css/alta_cliente.css
+++ b/css/alta_cliente.css
@@ -1,6 +1,6 @@
 /** Correcion margen izquierdo navbar **/
 .container {
-  margin-left: 73px !important;
+  /*margin-left: 73px !important;*/
 }
 
 /** FIN **/
