--- a/css/alta_empresa.css
+++ b/css/alta_empresa.css
@@ -1,12 +1,12 @@
 /** ESTILO CONTENEDOR **/
 .container {
-    margin-left: 73px !important;
+    /*margin-left: 73px !important;*/
 }
 /** FIN **/
 
 body {
   background-image: url('../imagenes/entradaBar3.jpg');
-    background-size: 1366px;
+  background-size: 1440px;
 }
 
 h3 {
@@ -47,7 +47,7 @@ h3 {
 	z-index: 100;
 	position: relative;
   border-radius: 4px;
-  left:23px;
+        left: 65px;
 }
 
 .index-busc .index-busc-cab-contacto  {
@@ -60,6 +60,7 @@ h3 {
 	z-index: 100;
 	position: relative;
   border-radius: 4px;
+ 
 
 }
 
@@ -72,7 +73,7 @@ h3 {
 	z-index: 100;
 	position: relative;
   border-radius: 4px;
-  right: 25px;
+  right: 70px;
 }
 
 
@@ -87,7 +88,7 @@ h3 {
 	position: relative;
   border-radius: 4px;
   top: 25px;
-  left: 100px;
+  left: 115px;
 }
 
 .input-group {
