--- a/css/login_cliente.css
+++ b/css/login_cliente.css
@@ -1,7 +1,7 @@
 
 /** Correcion margen izquierdo navbar **/
 .container {
-  margin-left: 73px !important;
+  /*margin-left: 73px !important;*/
 }
 
 /** Fin **/
@@ -67,6 +67,7 @@
 
 body {
   background-image: url("../imagenes/entradaBar1.jpg");
+  background-size: 1440px;
 }
 
 h3 {
@@ -116,7 +117,7 @@ h3 {
 	z-index: 100;
 	position: relative;
   border-radius: 4px;
-  left: -30px;
+  left: -85px;
 }
 
 .index-busc .index-busc-cab-formulario-datosAcceso  {
