--- a/css/login_empresa.css
+++ b/css/login_empresa.css
@@ -1,12 +1,12 @@
 
 /** Correcion margen izquierdo navbar **/
 .container {
-  margin-left: 73px !important;
+  /*margin-left: 73px !important;*/
 }
 
 body {
   background-image: url("../imagenes/entradaBar3.jpg");
-  background-size: 1366px;
+  background-size: 1440px;
 
 }
 
@@ -45,7 +45,8 @@ h3 {
 	width: 390px;
 	z-index: 100;
 	position: relative;
-  border-radius: 4px;
+        border-radius: 4px;
+        left: -25px;
 }
 
 .index-busc .index-busc-cab-alta  {
@@ -54,7 +55,7 @@ h3 {
 	padding: 20px 15px;
 	margin: 0 auto;
 	width: 275px;
-  left: 9%;
+        left: 75px;
 	z-index: 100;
 	position: relative;
   border-radius: 4px;
